--- a/views/deneme.ejs
+++ b/views/deneme.ejs
@@ -49,7 +49,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="#">Logo2</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -70,7 +70,7 @@
       
       <ul class="nav nav-pills nav-stacked">
         <li><a href="/home">Home</a></li>
-        <li class="active"><a href="/deneme">deneme</a></li>
+        <li class="active"><a href="/deneme">Deneme</a></li>
         <li><a href="#section3">Family</a></li>
         <li><a href="#section3">Photos</a></li>
       </ul><br>
