ana sayfa ve girişin hrefleri değiştirildi.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,7 +58,7 @@
               <li><a href="#">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/"><span class="glyphicon glyphicon-log-in"></span> Giriş Yap</a></li>
+              <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Giriş Yap</a></li>
             </ul>
           </div>
         </div>
