--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -36,6 +36,8 @@
             </div>
             <button type="submit" class="submit-btn">Kaydol</button>
         </form>
+        <p>Hesabın var mı? <a href="/login">Giriş Yap</a></p>
+
     </div>
 </body>
 </html>
