--- a/views/deneme.ejs
+++ b/views/deneme.ejs
@@ -69,7 +69,7 @@
     <div class="col-sm-2 sidenav">
       
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="/home">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li class="active"><a href="/deneme">Deneme</a></li>
         <li><a href="#section3">Family</a></li>
         <li><a href="#section3">Photos</a></li>
