--- a/views/home.ejs
+++ b/views/home.ejs
@@ -52,7 +52,7 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="/">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Projects</a></li>
               <li><a href="#">Contact</a></li>
@@ -68,7 +68,7 @@
     <div class="col-sm-2 sidenav">
       
       <ul class="nav nav-pills nav-stacked mt-3">
-        <li class="active"><a href="/home">Home</a></li>
+        <li class="active"><a href="/">Home</a></li>
         <li><a href="/deneme">deneme</a></li>
         <li><a href="#section3">Family</a></li>
         <li><a href="#section3">Photos</a></li>
