--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <title>Sağlık Portalı</title>
   <meta charset="utf-8">
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/public/style.css">
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
     .row.content {height: 1500px}
@@ -68,7 +69,7 @@
     <div class="col-sm-2 sidenav">
       
       <ul class="nav nav-pills nav-stacked mt-3">
-        <li class="active"><a href="/home">Home</a></li>
+        <li class="active"><a href="/saglik_Testleri">Sag</a></li>
         <li><a href="/deneme">deneme</a></li>
         <li><a href="#section3">Family</a></li>
         <li><a href="#section3">Photos</a></li>
@@ -77,6 +78,7 @@
     </div>
 
     <div class="col-sm-10">
+      
       <h4><small>RECENT POSTS</small></h4>
       <hr>
       <h2>I Love Food</h2>
