--- a/views/saglik_Testleri.ejs
+++ b/views/saglik_Testleri.ejs
@@ -10,51 +10,54 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/stylee.css">
   <link flex href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <script src="/scriptNavbar.js" defer></script>
-    <link rel="stylesheet" href="/navbar.css">
+  <script src="/scriptNavbar.js" defer></script>
+  <link rel="stylesheet" href="/navbar.css">
 
   <style>
     body {
-    background-image:url('/profile-1.jpeg'); /* Arka plan resmini belirtme */
-    background-size:cover; /* Resmi sayfanın tamamını kaplayacak şekilde ölçekleme */
-    background-position: center; /* Resmi sayfa ortasına hizalama */
-    background-color: rgba(255, 255, 255, 0.5); /* Opaklık eklemek için rgba kullanma */
+      background-image: url('/profile-1.jpeg');
+      /* Arka plan resmini belirtme */
+      background-size: cover;
+      /* Resmi sayfanın tamamını kaplayacak şekilde ölçekleme */
+      background-position: center;
+      /* Resmi sayfa ortasına hizalama */
+      background-color: rgba(255, 255, 255, 0.5);
+      /* Opaklık eklemek için rgba kullanma */
 
 
-}
+    }
+
     .navbar {
       margin-bottom: 0;
       border-radius: 0;
     }
-    
+
     footer {
-      
+
       background-color: #555;
       color: white;
       padding: 15px;
       margin-bottom: 0;
       padding-bottom: 0;
     }
-    
+
     /* On small screens, set height to 'auto' for sidenav and grid */
     @media screen and (max-width: 767px) {
       .sidenav {
         height: auto;
         padding: 15px;
       }
-      
+
       .row.content {
         height: auto;
       }
     }
-    
+
     * {
       margin: 0px;
       padding: 0px;
       box-sizing: border-box;
     }
-    
-
   </style>
 </head>
 
