--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -40,11 +40,11 @@
             </div>
             <div class="form-group">
                 <label for="email">E-Posta:</label>
-                <input type="email" id="email" name="email" placeholder="E-posta adresinizi girin" required autocomplete="off">
+                <input type="email" id="email" name="email" placeholder="E-posta adresinizi girin" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required autocomplete="off">
             </div>
             <div class="form-group">
                 <label for="phone">Telefon Numarası:</label>
-                <input type="tel" id="phone" name="phone" placeholder="0 538 716 47 10" pattern="[0-9]{4}-[0-9]{3}-[0-9]{4}" title="Lütfen telefon numaranızı 0___ ___ __ __ şeklinde girin" required autocomplete="off" inputmode="numeric" maxlength="11">
+                <input type="tel" id="phone" name="phone" placeholder="0 538 716 47 10" pattern="[0-9]{11}" title="Lütfen telefon numaranızı uygun şeklinde girin" required autocomplete="off" inputmode="numeric" maxlength="11">
             </div>
             <div class="form-group">
                 <label for="birthdate">Doğum Tarihi:</label>
@@ -53,11 +53,11 @@
             <div class="form-group">
                 <label for="pass">Şifre:</label>
                 <input type="password" id="pass" name="password" minlength="8" required  autocomplete="off"/>
-              </div>
-                <div class="form-group">
-                    <label for="pass">Şifre Tekrar:</label>
-                    <input type="password" id="pass" name="password2" minlength="8" required autocomplete="off" />
-
+            </div>
+            <div class="form-group">
+                <label for="pass">Şifre Tekrar:</label>
+                <input type="password" id="pass2" name="password2" minlength="8" required autocomplete="off" />
+            </div>
             <button type="submit" class="submit-btn ">Kaydol</button>
         </form>
         <p>Hesabın var mı? <a href="/login">Giriş Yap</a></p>
