--- a/views/home.ejs
+++ b/views/home.ejs
@@ -82,7 +82,7 @@
             <ul class="menu_item" style="padding:0;">
               
               <li class="item">
-                <a href="/anasayfa" class="link flex">
+                <a href="/" class="link flex">
                   <i class="bx bx-home-alt"></i>
                   <span>Anasayfa</span>
                 </a>
