--- a/views/anasayfa.ejs
+++ b/views/anasayfa.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Bootstrap Example</title>
+  <title>Sağlık Portalı</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap 5 CSS -->
@@ -127,7 +127,7 @@
             <span class="nav_image">
               <img src="/profile-1.jpeg" alt="/profile-1.jpeg" />
             </span>
-            <span class="logo_name">CodingNepal</span>
+            <span class="logo_name">SağlıkPortalı</span>
             <i class="bx bx-lock-alt" id="lock-icon" title="Unlock Sidebar"></i>
             <i class="bx bx-x" id="sidebar-close"></i>
           </div>
@@ -142,13 +142,13 @@
                 <li class="item">
                   <a href="#" class="link flex">
                     <i class="bx bx-home-alt"></i>
-                    <span>Overview</span>
+                    <span>Anasayfa</span>
                   </a>
                 </li>
                 <li class="item">
                   <a href="#" class="link flex">
                     <i class="bx bx-grid-alt"></i>
-                    <span>All Projects</span>
+                    <span>A</span>
                   </a>
                 </li>
               </ul>
@@ -174,7 +174,29 @@
                   </a>
                 </li>
               </ul>
-    
+              <ul class="menu_item " style="padding:0;">
+                <div class="menu_title flex">
+                  <span class="title">Sağlık Testleri</span>
+                  <span class="line"></span>
+                </div>
+                <li class="item">
+                  <a href="#" class="link flex">
+                    <i class="bx bx-flag"></i>
+                    <span>Notice Board</span>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="#" class="link flex">
+                    <i class="bx bx-award"></i>
+                    <span>Award</span>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="#" class="link flex">
+                    <i class="bx bx-cog"></i>
+                    <span>Setting</span>
+                  </a>
+                </li>
               <ul class="menu_item " style="padding:0;">
                 <div class="menu_title flex">
                   <span class="title">Setting</span>
@@ -199,16 +221,6 @@
                   </a>
                 </li>
               </ul>
-            </div>
-    
-            <div class="sidebar_profile flex">
-              <span class="nav_image">
-                <img src="/profile-1.jpeg" alt="/profile-1.jpeg" />
-              </span>
-              <div class="data_text">
-                <span class="name">David Oliva</span>
-                <span class="email">david@gmail.com</span>
-              </div>
             </div>
           </div>
         </nav>
