--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,8 +26,8 @@
         <form action="/login" method="post">
             
             <div class="form-group">
-                <label for="name">Ad:</label>
-                <input type="text" id="name" name="username" placeholder="Adını gir" required autocomplete="off">
+                <label for="username">Ad:</label>
+                <input type="text" id="username" name="username" placeholder="Adını gir" required autocomplete="off">
             </div>
             <div class="form-group">
                 <label for="password">Şifre:</label>
