--- a/views/anasayfa.ejs
+++ b/views/anasayfa.ejs
@@ -176,25 +176,25 @@
               </ul>
               <ul class="menu_item " style="padding:0;">
                 <div class="menu_title flex">
-                  <span class="title">Sağlık Testleri</span>
+                  <div class="title">Sağlık Testleri</div>
                   <span class="line"></span>
                 </div>
                 <li class="item">
                   <a href="#" class="link flex">
                     <i class="bx bx-flag"></i>
-                    <span>Notice Board</span>
+                    <span>Akciğer Testi</span>
                   </a>
                 </li>
                 <li class="item">
                   <a href="#" class="link flex">
                     <i class="bx bx-award"></i>
-                    <span>Award</span>
+                    <span>Kalp Krizi Testi</span>
                   </a>
                 </li>
                 <li class="item">
-                  <a href="#" class="link flex">
+                  <a href="/indeks" class="link flex">
                     <i class="bx bx-cog"></i>
-                    <span>Setting</span>
+                    <span>Vucüt Kitle İndeksi</span>
                   </a>
                 </li>
               <ul class="menu_item " style="padding:0;">
