--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label for="phone">Telefon Numarası:</label>
-                <input type="tel" id="phone" name="phone" placeholder="0 538 716 47 10" pattern="[0-9]{11}" title="Lütfen telefon numaranızı uygun şeklinde girin" required autocomplete="off" inputmode="numeric" maxlength="11">
+                <input type="tel" id="phone" name="phone" inputmode="numeric" placeholder="0 538 716 47 10" pattern="[0-9]{11}" title="Lütfen telefon numaranızı uygun şeklinde girin" required autocomplete="off" inputmode="numeric" maxlength="11">
             </div>
             <div class="form-group">
                 <label for="birthdate">Doğum Tarihi:</label>
