--- a/views/indeks.ejs
+++ b/views/indeks.ejs
@@ -12,6 +12,7 @@
   <link flex href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <script src="/scriptNavbar.js" defer></script>
   <link rel="stylesheet" href="/navbar.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <style>
     body {
@@ -130,110 +131,8 @@
         </ul>
       </div> -->
 
-      <div class="col-sm-2 ">
-        <nav class="sidebar locked">
-          <div class="logo_items flex">
-            <span class="nav_image">
-              <img src="/profile-1.jpeg" alt="/profile-1.jpeg" />
-            </span>
-            <span class="logo_name">SağlıkPortalı</span>
-            <i class="bx bx-lock-alt" id="lock-icon" title="Unlock Sidebar"></i>
-            <i class="bx bx-x" id="sidebar-close"></i>
-          </div>
-    
-          <div class="menu_container ">
-            <div class="menu_items">
-              <ul class="menu_item" style="padding:0;">
-                <div class="menu_title flex">
-                  <span class="title">Dashboard</span>
-                  <span class="line"></span>
-                </div>
-                <li class="item">
-                  <a href="#" class="link flex">
-                    <i class="bx bx-home-alt"></i>
-                    <span>Anasayfa</span>
-                  </a>
-                </li>
-                <li class="item">
-                  <a href="#" class="link flex">
-                    <i class="bx bx-grid-alt"></i>
-                    <span>A</span>
-                  </a>
-                </li>
-              </ul>
-    
-              <ul class="menu_item "style="padding:0;">
-            
-                <li class="item">
-                  <a href="#" class="link flex">
-                    <i class="bx bxs-magic-wand"></i>
-                    <span>Magic Build</span>
-                  </a>
-                </li>
-                <li class="item">
-                  <a href="#" class="link flex">
-                    <i class="bx bx-folder"></i>
-                    <span>New Projects</span>
-                  </a>
-                </li>
-                <li class="item">
-                  <a href="#" class="link flex">
-                    <i class="bx bx-cloud-upload"></i>
-                    <span>Upload New</span>
-                  </a>
-                </li>
-              </ul>
-              <ul class="menu_item " style="padding:0;">
-                <div class="menu_title flex">
-                  <div class="title">Testler</div>
-                  <span class="line"></span>
-                </div>
-                <li class="item">
-                  <a href="/akciger-kanseri-testi" class="link flex">
-                    <i class="bx bx-flag"></i>
-                    <span>Akciğer Kanseri Testi</span>
-                  </a>
-                </li>
-                <li class="item">
-                  <a href="#" class="link flex">
-                    <i class="bx bx-award"></i>
-                    <span>Kalp Krizi Testi</span>
-                  </a>
-                </li>
-                <li class="item">
-                  <a href="/indeks" class="link flex">
-                    <i class="bx bx-cog"></i>
-                    <span>Vücut Kitle İndeksi</span>
-                  </a>
-                </li>
-              <ul class="menu_item " style="padding:0;">
-                <div class="menu_title flex">
-                  <span class="title">Setting</span>
-                  <span class="line"></span>
-                </div>
-                <li class="item">
-                  <a href="#" class="link flex">
-                    <i class="bx bx-flag"></i>
-                    <span>Notice Board</span>
-                  </a>
-                </li>
-                <li class="item">
-                  <a href="#" class="link flex">
-                    <i class="bx bx-award"></i>
-                    <span>Award</span>
-                  </a>
-                </li>
-                <li class="item">
-                  <a href="#" class="link flex">
-                    <i class="bx bx-cog"></i>
-                    <span>Setting</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-    </div>
+    <%- include('partial/sidebar') %>
+      
       
     <div class="container mt-5">
       <div class="row justify-content-center align-items-center">
