egzersiz hareketlerinin bir kısmı eklendi.

--- a/views/akciger-kanseri-testi.ejs
+++ b/views/akciger-kanseri-testi.ejs
@@ -233,6 +233,11 @@
                   <span class="range-value">0</span>
                 </div>
 
+                <div class="mb-3">
+                  <label for="saveResults" class="form-label">Sonuçları kaydetmek istiyor musunuz?</label>
+                  <input type="checkbox" name="saveResults" id="saveResults">
+                </div>
+
                 <button type="submit" class="btn btn-primary">Gönder</button>
               </form>
             </div>
