--- a/views/kalp-krizi-test.ejs
+++ b/views/kalp-krizi-test.ejs
@@ -192,6 +192,11 @@
         <input type="range" class="form-range" name="sleepHoursPerDay" id="sleepHoursPerDay" min="4" max="10" value="8">
         <span class="range-value">8</span>
     </div>
+    
+    <div class="mb-3">
+      <label for="saveResults" class="form-label">Sonuçları kaydetmek istiyor musunuz?</label>
+      <input type="checkbox" name="saveResults" id="saveResults">
+  </div>
 
     <button type="submit" class="btn btn-primary">Tahmin Et</button>
 </form>
