--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,6 +13,7 @@
   <script src="/scriptNavbar.js" defer></script>
   <link rel="stylesheet" href="/navbar.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="icon" type="image/x-icon" href="new_favicon.ico">
 
   <style>
     
@@ -50,7 +51,6 @@
 </head>
 
 <body>
-  
 
 <nav class="navbar flex phoneNavbar ">
   <div class="container-fluid">
