--- a/views/partial/sidebar.ejs
+++ b/views/partial/sidebar.ejs
@@ -28,9 +28,9 @@
 
                 <ul class="menu_item " style="padding:0;">
                     <li class="item">
-                        <a href="#" class="link flex">
+                        <a href="/exercise-finder" class="link flex">
                             <i class="bx bxs-magic-wand"></i>
-                            <span>Magic Build</span>
+                            <span>Egzersiz Bulucu</span>
                         </a>
                     </li>
                     <li class="item">
